--- a/react-app/src/App.css
+++ b/react-app/src/App.css
@@ -51,6 +51,7 @@
 body {
   margin: 0;
   padding: 0;
+  overscroll-behavior-y: contain;
 }
 
 .marker-cluster-small {
@@ -63,4 +64,20 @@ body {
 
 .marker-cluster-large {
   background-color: rgba(253, 156, 115, 0.6);
+}
+
+@media (max-width: 600px) {
+  .leaflet-control-container .leaflet-top {
+    top: 0;
+  }
+  
+  .leaflet-control-container .leaflet-bottom {
+    bottom: 60px;
+  }
+}
+
+html, body, #root {
+  height: 100%;
+  margin: 0;
+  padding: 0;
 }
